# AeroPuzzzle

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
aeropuzzle/: app.py
src/aeropuzzle/: app.py  hand_tracking.py
